--- a/flutter_storage_dersleri/pubspec.yaml
+++ b/flutter_storage_dersleri/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter 
   shared_preferences: ^2.0.6
+  path_provider: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
