--- a/flutter_storage_dersleri/pubspec.yaml
+++ b/flutter_storage_dersleri/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter 
   shared_preferences: ^2.0.6
   path_provider: ^2.0.2
+  sqflite: any
 
 
   # The following adds the Cupertino Icons font to your application.
