--- a/flutter_firebase_dersleri/pubspec.yaml
+++ b/flutter_firebase_dersleri/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.0
+  google_sign_in: ^5.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
