--- a/flutter_firebase_dersleri/pubspec.yaml
+++ b/flutter_firebase_dersleri/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.0
   google_sign_in: ^5.0.4
+  firebase_storage: ^10.0.1
+  image_picker: ^0.8.2
+  cloud_firestore: ^2.4.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
