--- a/flutter_animasyon/pubspec.yaml
+++ b/flutter_animasyon/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_sequence_animation: ^4.0.0-nullsafety
 
 
   # The following adds the Cupertino Icons font to your application.
