--- a/flutter_bloc_paket/pubspec.yaml
+++ b/flutter_bloc_paket/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_state
+name: flutter_bloc_paket
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,10 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^5.0.0
-  firebase_core: ^1.4.0
-  firebase_auth: ^3.0.1
-  
+  flutter_bloc: ^7.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
