--- a/flutter_weatherapp_with_bloc/pubspec.yaml
+++ b/flutter_weatherapp_with_bloc/pubspec.yaml
@@ -23,11 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^7.1.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
