--- a/flutter_weatherapp_with_bloc/pubspec.yaml
+++ b/flutter_weatherapp_with_bloc/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^7.1.0
   equatable: ^2.0.3
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
