--- a/flutter_weatherapp_with_bloc/pubspec.yaml
+++ b/flutter_weatherapp_with_bloc/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_bloc: ^7.1.0
   equatable: ^2.0.3
   get_it: ^7.2.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
