--- a/flutter_lovers/pubspec.yaml
+++ b/flutter_lovers/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   firebase_core: ^1.4.0
   get_it: ^7.2.0
   provider: ^5.0.0
-
+  google_sign_in: ^5.0.5
 
 dev_dependencies:
   flutter_test:
