--- a/flutter_lovers/pubspec.yaml
+++ b/flutter_lovers/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get_it: ^7.2.0
   provider: ^5.0.0
   google_sign_in: ^5.0.5
+  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
