--- a/flutter_lovers/pubspec.yaml
+++ b/flutter_lovers/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^5.0.0
   google_sign_in: ^5.0.5
   flutter_facebook_login: ^3.0.0
+  cloud_firestore: ^2.4.0
 
 dev_dependencies:
   flutter_test:
