--- a/flutter_lovers/pubspec.yaml
+++ b/flutter_lovers/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^5.0.5
   flutter_facebook_login: ^3.0.0
   cloud_firestore: ^2.4.0
+  image_picker: ^0.8.3
 
 dev_dependencies:
   flutter_test:
