--- a/flutter_lovers/pubspec.yaml
+++ b/flutter_lovers/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   cloud_firestore: ^2.4.0
   image_picker: ^0.8.3
+  firebase_storage: ^10.0.1
 
 dev_dependencies:
   flutter_test:
